# localsend-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: discovery.rs  main.rs  protocol.rs  receive.rs  send.rs  util.rs  webshare.rs
tests/: cli_send.rs
