[package]
name = "localsend-cli"
version = "0.9.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2"
futures-util = "0.3"
glob = "0.3"
hex = "0.4"
hostname = "0.4"
if-addrs = "0.13"
ipnet = "2.9"
mime_guess = "2.0"
qrcode = "0.13"
rand = "0.8"
rcgen = "0.13"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
socket2 = "0.5"
tempfile = "3.10"
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"
urlencoding = "2.1"
uuid = { version = "1.10", features = ["v4"] }
walkdir = "2.5"
zip = "0.6"

[dev-dependencies]
assert_cmd = "2.0"
serial_test = "3.1"
